# baysed-chess

./: .gitignore  LICENSE-MIT  README.md  classic_mcts.py  engine.py  eval.py  foolsmate.py  i_mcts.py  lichess-engine.py  main.py  mcts.py  min_max_of_gaussians.ggb  pyproject.toml  readme.md  requirements.txt  web.py
baysed_chess/: engine_factory.py  hypothesis_test.py  limit.py  matchmaker.py
baysed_chess/board_evaluations/: evaluate_lc0.py  evaluate_michniewsk.py  evaluate_pestos.py  evaluate_stockfish.py
baysed_chess/engine/: bayes_mcts_engine.py  classic_mcts_engine.py  classic_mcts_engine_v2.py  i_engine.py  lc0_engine.py  random_engine.py  stockfish_engine.py
baysed_chess/mcts/: baysian_mcts.py  baysian_mcts_node.py  classic_mcts.py  classic_mcts_node.py  classic_mcts_node_v2.py  classic_mcts_v2.py  gaussian_utils.py  i_mcts.py  i_mcts_node.py
baysed_chess/strategies/: i_strategy.py  lc0_strategy.py  pesto_strategy.py  random_stockfish_strategy.py  random_strategy.py  stockfish_strategy.py
baysed_chess/web/: web.py
chesspp/: baysian_mcts.py  classic_mcts.py  engine.py  engine_factory.py  eval.py  eval_pesto.py  i_mcts.py  i_strategy.py  lc0_strategy.py  lichess-engine.py  matchmaker.py  pesto_strategy.py  random_stockfish_strategy.py  random_strategy.py  simulation.py  stockfish_strategy.py  util.py  util_gaussian.py  web.py
chesspp/board_evaluations/: evaluate_lc0.py  evaluate_michniewsk.py  evaluate_stockfish.py
lichess_bot/: .gitignore  config.yml  config.yml.example  homemade.py  lichess-bot.py
scripts/: board-analyzer.py  main.py  web.py
(+45 files in other folders)
