[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-pp"
version = "0.1"
dependencies = [
    "chess==1.10.0",
    "numpy==1.26.3",
    "stockfish==3.28.0",
    "torch==2.1.2",
    "pytest==8.0.0",
    "aiohttp==3.9.2",
    "scipy==1.12.0"
]
requires-python = ">= 3.10"

[tool.setuptools]
py-modules = ["chesspp"]
